# signature

./: .gitignore  CMakeLists.txt  README.md  signature_tests.cmake
include/: big_file.hpp  processor.hpp  signature.hpp  signature_engine.hpp  threadsafe_queue.hpp
src/: big_file.cpp  main.cpp  processor.cpp  signature.cpp  signature_engine.cpp
tests/: big_file_test.cpp  signature_engine_test.cpp  signature_test.cpp  threadsafe_queue_test.cpp
